--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,9 @@ steps:
 
   - task: CopyFiles@2
     inputs:
+      SourceFolder: '$(agent.builddirectory)'
       Contents: '**'
-      TargetFolder: 
+      TargetFolder: '$(build.artifactstagingdirectory)'
 
   - task: PublishBuildArtifacts@1
     inputs:
